# ganit-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  codecov.yml  conformance-badge.json  coverage-badge.json  deny.toml  index.html
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: display.rs  engine.rs  lib.rs
crates/core/src/eval/: mod.rs
crates/core/src/eval/coercion/: mod.rs
crates/core/src/eval/coercion/tests/: edge.rs  failure.rs  success.rs
crates/core/src/eval/context/: mod.rs
crates/core/src/eval/context/tests/: edge.rs  failure.rs  success.rs
crates/core/src/eval/functions/: mod.rs
crates/core/src/eval/functions/array/: mod.rs
crates/core/src/eval/functions/array/tests/: array_constrain.rs  edge.rs  failure.rs  flatten.rs  mod.rs  rows_columns.rs  sort.rs  success.rs  sumproduct.rs  transpose.rs  unique.rs
crates/core/src/eval/functions/database/: mod.rs
crates/core/src/eval/functions/database/tests/: edge.rs  failure.rs  success.rs
crates/core/src/eval/functions/date/: mod.rs  serial.rs
crates/core/src/eval/functions/date/date_fn/: mod.rs
crates/core/src/eval/functions/date/datedif/: mod.rs
crates/core/src/eval/functions/date/datevalue/: mod.rs
crates/core/src/eval/functions/date/day/: mod.rs
crates/core/src/eval/functions/date/days/: mod.rs
crates/core/src/eval/functions/date/days360/: mod.rs
crates/core/src/eval/functions/date/edate/: mod.rs
crates/core/src/eval/functions/date/eomonth/: mod.rs
crates/core/src/eval/functions/date/epochtodate/: mod.rs
crates/core/src/eval/functions/date/hour/: mod.rs
crates/core/src/eval/functions/date/isoweeknum/: mod.rs
crates/core/src/eval/functions/date/minute/: mod.rs
crates/core/src/eval/functions/date/month/: mod.rs
crates/core/src/eval/functions/date/networkdays/: mod.rs
crates/core/src/eval/functions/date/networkdays_intl/: mod.rs
crates/core/src/eval/functions/date/now/: mod.rs
crates/core/src/eval/functions/date/second/: mod.rs
crates/core/src/eval/functions/date/time_fn/: mod.rs
crates/core/src/eval/functions/date/timevalue/: mod.rs
crates/core/src/eval/functions/date/today/: mod.rs
crates/core/src/eval/functions/date/weekday/: mod.rs
crates/core/src/eval/functions/date/weeknum/: mod.rs
crates/core/src/eval/functions/date/workday/: mod.rs
crates/core/src/eval/functions/date/workday_intl/: mod.rs
crates/core/src/eval/functions/date/year/: mod.rs
crates/core/src/eval/functions/date/yearfrac/: mod.rs
crates/core/src/eval/functions/engineering/: mod.rs
crates/core/src/eval/functions/engineering/bitand/: mod.rs
crates/core/src/eval/functions/engineering/complex/: mod.rs
crates/core/src/eval/functions/filter/: mod.rs
crates/core/src/eval/functions/financial/: mod.rs
crates/core/src/eval/functions/logical/: cell_fn.rs  constants.rs  info.rs  mod.rs  xor.rs
crates/core/src/eval/functions/logical/or/: mod.rs
crates/core/src/eval/functions/lookup/: address.rs  array_utils.rs  cell_ref.rs  choose.rs  index_match.rs  indirect.rs  lookup_fn.rs  misc.rs  mod.rs  row_col.rs  vlookup.rs
crates/core/src/eval/functions/math/: criterion.rs  mod.rs
crates/core/src/eval/functions/operator/: mod.rs
crates/core/src/eval/functions/parser/: mod.rs
crates/core/src/eval/functions/statistical/: distributions.rs  distributions_impl.rs  mod.rs  stat_helpers.rs
crates/core/src/eval/functions/text/: mod.rs
crates/core/src/eval/functions/web/: mod.rs
crates/core/src/eval/tests/: array_literal.rs  edge.rs  failure.rs  mod.rs  success.rs
crates/core/src/parser/: ast.rs  mod.rs  tokens.rs
crates/core/src/types/: value.rs
crates/core/tests/: conformance.rs  conformance_reporter.rs  helpers.rs  integration.rs  migrate_fixtures.rs  property_array.rs  property_conformance.rs  property_date.rs  property_error_propagation.rs  property_financial.rs  property_logical.rs  property_lookup.rs  property_math.rs  property_text.rs  property_volatile.rs  property_web.rs  registry.rs
crates/core/tests/fixtures/google_sheets/: array.tsv  bugs.tsv  database.tsv  date.tsv  engineering.tsv  filter.tsv  financial.tsv  info.tsv  logical.tsv  lookup.tsv  math.tsv  operator.tsv  parser.tsv  statistical.tsv  text.tsv  web.tsv
crates/core/tests/fixtures/lab/: README.md  financial.tsv
crates/core/tests/fixtures/m1/: Info.xlsx  Logical.xlsx  Math.xlsx  Operator.xlsx  Statistical.xlsx  Text.xlsx
crates/core/tests/fixtures/m2/: Math.xlsx  Statistical.xlsx  Text.xlsx
crates/mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/mcp/src/: main.rs
crates/wasm/: CHANGELOG.md  Cargo.toml  README.md  package.json
crates/wasm/src/: lib.rs
ganit/: .gitignore  Cargo.toml  LICENSE
ganit/.github/workflows/: ci.yml
ganit/crates/core/: Cargo.toml
ganit/crates/core/src/: lib.rs
ganit/crates/mcp/: Cargo.toml
ganit/crates/mcp/src/: main.rs
ganit/crates/wasm/: Cargo.toml
ganit/crates/wasm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: gen_array_filter.rs  gen_database.rs  gen_logical_info.rs  gen_lookup.rs  gen_math.rs  gen_operator.rs  gen_parser_web.rs  gen_statistical.rs  gen_text_date_eng_fin.rs  generate.rs  main.rs  oracle_sheets.rs  sheets_eval.rs  types.rs
(+761 files in other folders)
