[workspace]
members = ["crates/core", "crates/wasm", "crates/mcp"]
resolver = "2"

[workspace.package]
version = "0.4.8"
edition = "2021"
license = "MIT"
authors = ["truecalc"]
repository = "https://github.com/truecalc/core"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
panic = 'abort'
