[workspace]
members = ["crates/core", "crates/wasm", "crates/mcp", "xtask"]
resolver = "2"

[workspace.package]
version = "0.4.17"
edition = "2021"
license = "MIT"
authors = ["truecalc"]
repository = "https://github.com/truecalc/core"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
panic = 'abort'
