[package]
name = "ganit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spreadsheet formula engine — parser and evaluator for Excel-compatible formulas"
repository.workspace = true

[dependencies]
nom = "8"

[dev-dependencies]
proptest = "1"
calamine = "0.26"
