[package]
name = "ganit-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing ganit formula evaluation as a tool for AI assistants"
repository.workspace = true

[[bin]]
name = "ganit-mcp"
path = "src/main.rs"

[dependencies]
ganit-core = { path = "../core", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
