[package]
name = "truecalc-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing truecalc formula evaluation as a tool for AI assistants"
repository.workspace = true
readme = "README.md"

[[bin]]
name = "truecalc-mcp"
path = "src/main.rs"

[dependencies]
truecalc-core = { path = "../core", version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
