[package]
name = "ganit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # published to npm via wasm-pack, not crates.io
description = "Spreadsheet formula engine for the browser — Excel-compatible formula evaluator compiled to WebAssembly"
keywords = ["spreadsheet", "formula", "excel", "wasm", "evaluator"]
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ganit-core = { path = "../core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"
tsify-next = { version = "0.5", features = ["js"] }
serde = { version = "1", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # wasm-opt segfaults on this binary; re-enable when wasm-pack ships a fix
