[package]
name = "ganit-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ganit-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
ganit-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
